Make channel status purely aggregate

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "pgtools": "^0.2.3"
   },
   "scripts": {
-    "test": "mocha -w --inspect"
+    "test": "mocha -w --watch-extensions sql --inspect"
   },
   "dependencies": {
     "pg-async": "^2.4.3"
