Don't use pgtools

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "devDependencies": {
     "chai": "^4.1.0",
     "chai-subset": "^1.5.0",
-    "mocha": "^3.4.2",
-    "pgtools": "^0.2.3"
+    "mocha": "^3.4.2"
   },
   "scripts": {
     "test": "mocha -w --watch-extensions sql --inspect"
