--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
+    "argparse": "^1.0.9",
     "chai": "^4.1.0",
     "chai-subset": "^1.5.0",
+    "fast-stats": "0.0.3",
     "mocha": "^3.4.2"
   },
   "scripts": {
