--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "argparse": "^1.0.9",
     "chai": "^4.1.0",
+    "chai-as-promised": "^7.1.1",
     "chai-subset": "^1.5.0",
     "fast-stats": "0.0.3",
     "mocha": "^3.4.2"
